# OpenCL-Practice

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindOpenCL.cmake
opencl_programming_guide/: CMakeLists.txt
opencl_programming_guide/ch2_simple_convolution/: CMakeLists.txt  cl_program_dir.h.in  convolution.cl  main.c
opencl_programming_guide/hello_world/: CMakeLists.txt  hello_world.cl  main.c
ray_test/: CMakeLists.txt  main.c  ray_test.cl
util/: CMakeLists.txt  util.c  util.h
